python/testData/highlighting/fStringSingleRightBraces.py
f'<error descr="A single '}' is not allowed inside f-strings">}</error>'
f'{x}{y}<error descr="A single '}' is not allowed inside f-strings">}</error>'
f'{x}}}<error descr="A single '}' is not allowed inside f-strings">}</error>'
f'{x:{y}}<error descr="A single '}' is not allowed inside f-strings">}</error>'
f'{x:{y}}}}'
f'{"}":{"}"}}'
f'\N{FOO BAR}'